[gd_scene load_steps=2 format=3]
[ext_resource type="Script" path="res://game/scripts/SettingsPanel.gd" id="1"]

[node name="SettingsPanel" type="Window"]
visible = false
position = Vector2(200, 120)
size = Vector2i(420, 260)
initial_position = 1
always_on_top = true
unresizable = true
wrap_controls = true
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(360, 180)
padding_left = 16
padding_right = 16
padding_top = 12
padding_bottom = 12

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
text = "Settings"

[node name="Separator" type="HSeparator" parent="Panel/VBox"]

[node name="TextScaleRow" type="HBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 32)

[node name="TextScaleLabel" type="Label" parent="Panel/VBox/TextScaleRow"]
unique_name_in_owner = true
text = "Text Size"
size_flags_horizontal = 1

[node name="TextScaleOption" type="OptionButton" parent="Panel/VBox/TextScaleRow"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="DiagnosticsSpacer" type="Control" parent="Panel/VBox"]
size_flags_vertical = 3

[node name="CopyDiagnosticsButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
text = "Copy Diagnostics"

[node name="CloseButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
text = "Close"

